安卓打包keystore创建，以及测试

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string moduleConfig="true" name="reactNativeCodePush_androidDeploymentKey"></string>
+    <string name="reactNativeCodePush_androidDeploymentKey" moduleConfig="true"></string>
     <string name="app_name">1699平台</string>
 </resources>
